Fix bg-color contrast issue to fome page

--- a/static/styles/app.css
+++ b/static/styles/app.css
@@ -1377,7 +1377,7 @@ footer h2 {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color:aliceblue;
+  background-color: rgba(240, 248, 255, 0.9);
 }
 
 .home-description > p {
@@ -1449,14 +1449,14 @@ margin-right: 10%;
 .user-quote1 {
   font-family: 'Merriweather Sans', sans-serif;
   text-align: left;
-  background-color: aliceblue;
+  background-color: rgba(240, 248, 255, 0.9);
   flex-basis: 30%;
 }
 
 .user-quote2 {
   font-family: 'Merriweather Sans', sans-serif;
   text-align: left;
-  background-color: aliceblue;
+  background-color: rgba(240, 248, 255, 0.9);
   flex-basis: 30%;
 }
 
